--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <div class="row mt-5">
             <!-- Refactor Code Tile -->
             <div class="col-md-4">
-                <a href="{% url 'refactor_view' %}" class="tile">
+                <a href="#" class="tile">
                     <div class="card tile-card bg-gradient-primary text-white shadow-lg animated-tile">
                         <div class="card-body">
                             <i class="bi bi-code-slash display-4"></i>
@@ -23,7 +23,7 @@
 
             <!-- Upload Code Tile -->
             <div class="col-md-4">
-                <a href="{% url 'upload_code' %}" class="tile">
+                <a href="#" class="tile">
                     <div class="card tile-card bg-gradient-success text-white shadow-lg animated-tile">
                         <div class="card-body">
                             <i class="bi bi-upload display-4"></i>
@@ -91,7 +91,7 @@
 
         <!-- Animated CTA Button -->
         <div class="mt-5">
-            <a href="{% url 'refactor_view' %}" class="btn btn-lg btn-info shadow-lg pulse-animation">
+            <a href="#" class="btn btn-lg btn-info shadow-lg pulse-animation">
                 <i class="bi bi-lightbulb"></i> Get Started with AI Refactoring
             </a>
         </div>
